--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,33 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment2"
+    android:name="com.omni.moviewdb.fragments.MovieProfilePageFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.omni.moviewdb.DetailsActivity">
-
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_details"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
-
-    <fragment
-        android:id="@+id/fragment2"
-        android:name="com.omni.moviewdb.fragments.MovieProfilePageFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout="@layout/movie_profile"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        />
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:layout="@layout/movie_profile" />
 
 
-</android.support.design.widget.CoordinatorLayout>
